# nanotron

./: .gitignore  Makefile  README.md  modal_run.py  pyproject.toml
core/: __init__.py  layers.py  logger.py  parallel_dims.py
src/core/: __init__.py  layers.py  parallel_dims.py
src/models/gpt2/: model.py  parallelize.py
tests/: fixtures.py  test_dp_tp_benchmark.py  test_e2e.py  test_tp_communication.py  test_tp_layers.py  utils.py
